<resources>
    <string name="app_name">NO Monkeying Around!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="activity_tracker">Activity Tracker</string>
    <string name="calendar">Calendar</string>
    <string name="growAtree">Grow A Tree</string>
    <string name="weeklyView">Week</string>
    <string name="monthlyView">Month</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Enter Password</string>
    <string name="prompt_password_2">Re Enter Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Name">Name</string>
    <string name="UserName">User Name</string>
    <string name="enterAge">Age</string>
    <string name="CreateAccount">Create Account</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="treeCollection">Tree Collection</string>
    <string name="Login">Login</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="physician">Physician</string>
</resources>