<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserAccountTableController">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:text="@string/CreateAccount"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputName"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#808080"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/InputUsername"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#808080"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputAge" />

    <EditText
        android:id="@+id/InputAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#808080"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/enterAge"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputName" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#808080"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputUsername" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#808080"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/prompt_password_2"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputPassword" />

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="casual"
        android:text="@string/CreateAccount"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isStudent" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/isTeacher"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:hint="@string/teacher"
        app:layout_constraintEnd_toStartOf="@+id/isStudent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassword" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/isStudent"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/student"
        app:layout_constraintEnd_toStartOf="@+id/isPhysician"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassword" />

    <com.google.android.material.chip.Chip
        style="@style/Widget.MaterialComponents.Chip.Choice"
        android:id="@+id/isPhysician"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginEnd="68dp"
        android:hint="@string/physician"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>