<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginOrAccountCreate"
    android:background="@color/white">

    <Button
        android:id="@+id/CreateAccount"
        android:layout_width="252dp"
        android:layout_height="76dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="casual"
        android:text="@string/CreateAccount"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <Button
        android:id="@+id/Login"
        android:layout_width="252dp"
        android:layout_height="76dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/cardview_dark_background"
        android:fontFamily="casual"
        android:text="@string/Login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NMA" />

    <TextView
        android:id="@+id/NMA"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:fontFamily="casual"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/TreeArtForLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homepagetree_placeholder" />
</androidx.constraintlayout.widget.ConstraintLayout>